# MMCS

./: .gitignore  README.md
Lab_1/: CMakeLists.txt  accountrecord.cpp  accountrecord.h  checkpassword.cpp  checkpassword.h  checkpassword.ui  createrecorddialog.cpp  createrecorddialog.h  createrecorddialog.ui  homewindow.cpp  homewindow.h  homewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  records.json  records_enc.txt  recordsmanager.cpp  recordsmanager.h  recordwidget.cpp  recordwidget.h  recordwidget.ui
Lab_2/passThrough/: passThrough.c  passThrough.inf  passThrough.rc  passThrough.sln  passThrough.vcxproj  passThrough.vcxproj.Filters
Lab_2/test_read_write/: Source.cpp  asd.txt  test_read_write.sln  test_read_write.vcxproj
Lab_3/Front/: Front.sln
Lab_3/Front/Enclave/: Enclave3.cpp  Enclave3.vcxproj
Lab_3/Front/Front/: Front.cpp  Front.vcxproj  Front.vcxproj.filters
